# learning_dev_core

./: .gitignore  README.md
client/: Makefile
client/source/: client_socket.cpp  client_socket.h  main.cpp
cpp/notes/: constants.txt
cpp/section_14_challenge/: CMakeLists.txt
cpp/section_14_challenge/source/: Movies.cpp  (+1 more)
cpp/section_15_challenge/: CMakeLists.txt
cpp/section_20_challenge_1/: CMakeLists.txt  Makefile
cpp/section_20_challenge_2/: CMakeLists.txt  Makefile
cpp/section_20_challenge_2/source/: Song.cpp  Songs.cpp  main.cpp
file_agent/source/: fileagent.cpp  fileagent.h  main.cpp
file_logger/: Makefile
file_logger/source/: filelogger.cpp  filelogger.h  main.cpp
file_manager_linux/: Makefile
file_manager_linux/source/: file_manager.cpp  file_manager.h  main.cpp
notes/: concurrency.txt  oop.txt  operator_overloading.txt  operator_precedence.txt
section14challenge/: Movie.h  Movies.h
section15/: Account.cpp  Account_Util.cpp  Checking_Account.h  Savings_Account.cpp
section15challenge/: Account.h  Savings_Account.h
section_14_challenge/: CMakeLists.txt
section_14_challenge/source/: Movie.cpp  Movie.h  Movies.cpp  main.cpp
section_15_challenge/: CMakeLists.txt  Checking_Account.cpp
section_15_challenge/source/: Account_Util.cpp  Account_Util.h  Checking_Account.h  main.cpp
section_20_challenge_1/source/: main.cpp
section_20_challenge_2/source/: Song.cpp  Song.h  Songs.cpp  Songs.h
server/: Makefile
server/source/: main.cpp  server_socket.cpp  server_socket.h
timetutorial/: Makefile
timetutorial/source/: main.cpp
(+13 files in other folders)
